--- a/SquawCreekWebSite/HTML/Golf-Course.html
+++ b/SquawCreekWebSite/HTML/Golf-Course.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script src="../scripts/libs/jquery-3.2.1.min.js"></script>
-    <script src="../scripts/libs/tether.min.js"></script>
     <script src="../scripts/libs/bootstrap.min.js"></script>
     <script src="../scripts/libs/plugger.js"></script>
 </head>
@@ -57,7 +56,21 @@
     <div class="col-12 col-md-auto">
         </br></br></br></br></br></br></br></br>
     </div>
-
+	
+	<div class="col-8">
+	<p>The Squaw Creek golf course has 12 different golf courses and we allow members to use them for the entertainment. When you become a member you can register for different events that we host once a week so you can get the full experience of our golf course. Our golf courses are surrounded by lakes which makes Squaw Creek golf course a place to visit and enjoy golfing.</p>
+	
+	<div class="col-8">
+	<img src="https://images.pexels.com/photos/163886/magnolia-golf-course-mobile-alabama-golfing-163886.jpeg?h=350&auto=compress&cs=tinysrgb">
+	<br>
+	<br>
+	<img src="https://images.pexels.com/photos/164250/pexels-photo-164250.jpeg?h=350&auto=compress&cs=tinysrgb">
+	<br>
+	<br>
+	<img src="https://images.pexels.com/photos/209982/pexels-photo-209982.jpeg?h=350&auto=compress&cs=tinysrgb">
+	
+	
+	
     <!--Footer-->
     <footer>
         <div class="col-12 ctnter"><img class="imgcen" src="img/squaw-footer.png" width="114" height="75" /></div>
