--- a/SquawCreekWebSite/HTML/sign-up.html
+++ b/SquawCreekWebSite/HTML/sign-up.html
@@ -58,6 +58,36 @@
         </br></br></br></br></br></br></br></br>
     </div>
 
+    <header>Sign Up for Membership and Our Weekly Newsletter!</header>
+
+
+    <form id="signUpForm">
+
+        <div class="signUpInput">
+            <input type="text" placeholder="First Name" name="firstName" id="firstNameSU" required>
+        </div>
+
+        <div class="signUpInput">
+            <input type="text" placeholder="Last Name" name="lastName" id="lastNameSU" required>
+        </div>
+
+        <div class="signUpInput">
+            <input type="tel" placeholder="Phone Number" name="phoneNumber" id="phoneNumberSU" pattern='[\(]\d{3}[\)]\d{3}[\-]\d{4}' title='Phone Number (Format: (999)999-9999)' required>
+        </div>
+
+        <div class="signUpInput">
+            <input type="email" placeholder="Email" name="email" id="emailSU" required>
+        </div>
+
+        <input type="submit" value="Submit" id="signUpSubmit">
+
+
+    </form>
+
+    <div class="signUpDesc">
+        <h2>Someone will reach out to you within two business days to speak to you about membership!</h2>
+    </div>
+
     <!--Footer-->
     <footer>
         <div class="col-12 ctnter"><img class="imgcen" src="img/squaw-footer.png" width="114" height="75" /></div>
